test/classes/errors/nilability-assign/assign-nonnil-shared-from-oknil-owned.good
assign-nonnil-shared-from-oknil-owned.chpl:8: error: Cannot assign to shared MyClass from owned MyClass?
